# raptor

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: crates-io.yml  release-pr.yaml
benches/: encode.rs
src/: common.rs  decoder.rs  encoder.rs  encodingsymbols.rs  lib.rs  partition.rs  raptor.rs  sparse_matrix.rs  tables.rs
tests/: raptor.rs
